--- a/app/src/main/res/layout/item_custom_outcoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_preview_message.xml
@@ -55,10 +55,10 @@
             android:id="@id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:autoLink="none"
+            android:autoLink="all"
             android:textColor="@color/warm_grey_four"
             android:textColorLink="@color/warm_grey_four"
-            android:textIsSelectable="true"
+            android:textIsSelectable="false"
             android:textSize="12sp"
             app:layout_alignSelf="flex_start"
             app:layout_flexGrow="1"
