--- a/app/src/main/res/layout/rv_item_mention.xml
+++ b/app/src/main/res/layout/rv_item_mention.xml
@@ -24,6 +24,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_height"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <FrameLayout
@@ -33,8 +34,9 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/activity_horizontal_margin">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/avatarImageView"
+            app:shapeAppearanceOverlay="@style/circleImageView"
             android:layout_width="@dimen/avatar_size"
             android:layout_height="@dimen/avatar_size"/>
 
