Improve icons further
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -22,6 +22,8 @@
   -->
 
 <resources>
+    <bool name="is_night">true</bool>
+
     <color name="conversation_item_header">#9FBDCC</color>
     <!--<color name="conversation_item_header">#CFCFCF</color>-->
 
