--- a/app/src/main/res/layout/rv_item_contact.xml
+++ b/app/src/main/res/layout/rv_item_contact.xml
@@ -28,15 +28,15 @@
     android:layout_margin="@dimen/margin_between_elements"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/checkedImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/avatarImageView"
+        android:layout_width="@dimen/small_item_height"
+        android:layout_height="@dimen/small_item_height"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_check_black_24dp"
-        android:tint="@color/colorPrimary"
-        android:visibility="gone" />
+        android:layout_marginStart="@dimen/double_margin_between_elements"
+        android:layout_marginEnd="@dimen/margin_between_elements"
+        app:shapeAppearanceOverlay="@style/circleImageView"
+        tools:srcCompat="@tools:sample/avatars"/>
 
     <androidx.emoji.widget.EmojiTextView
         android:id="@+id/name_text"
@@ -48,13 +48,14 @@
         android:ellipsize="end"
         tools:text="Contact item text" />
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/avatarImageView"
-        app:shapeAppearanceOverlay="@style/circleImageView"
-        android:layout_width="@dimen/small_item_height"
-        android:layout_height="@dimen/small_item_height"
+    <ImageView
+        android:id="@+id/checkedImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/double_margin_between_elements"
-        android:layout_marginEnd="@dimen/margin_between_elements" />
+        android:src="@drawable/ic_check_black_24dp"
+        android:tint="@color/colorPrimary"
+        android:visibility="gone" />
 
 </RelativeLayout>
