--- a/app/src/main/res/layout/rv_item_title_header.xml
+++ b/app/src/main/res/layout/rv_item_title_header.xml
@@ -25,7 +25,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/title_text_view"
+        android:id="@+id/titleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
