Lots of progress on selecting contacts
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/contacts_list_view.xml
+++ b/app/src/main/res/layout/contacts_list_view.xml
@@ -2,12 +2,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/selectedParticipantsRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="88dp"
+        android:layout_alignParentTop="true"
+        android:visibility="gone"
+        tools:listitem="@layout/rv_item_contact_selected" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_below="@id/selectedParticipantsRecyclerView"
+        android:background="?android:attr/listDivider" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/divider"
         tools:listitem="@layout/rv_item_contact" />
 
 </RelativeLayout>
