Updates to various things
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/menu/menu_contacts.xml
+++ b/app/src/main/res/menu/menu_contacts.xml
@@ -26,6 +26,7 @@
         android:animateLayoutChanges="true"
         android:icon="@drawable/ic_search_white_24dp"
         android:title="@string/nc_search"
+        android:visible="false"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|ifRoom" />
 
