Handle FAB differently
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
+        android:visibility="gone"
         app:backgroundTint="@color/colorPrimary"
         app:srcCompat="@drawable/ic_add_white_24px"
         app:tint="@color/white" />
