Fix selecting contacts
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/contacts_list_view.xml
+++ b/app/src/main/res/layout/contacts_list_view.xml
@@ -15,6 +15,7 @@
 
     <View
         android:id="@+id/divider"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_below="@id/selectedParticipantsRecyclerView"
