--- a/app/src/main/res/layout/rv_chat_incoming_text_item.xml
+++ b/app/src/main/res/layout/rv_chat_incoming_text_item.xml
@@ -19,50 +19,61 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginEnd="16dp"
-    android:layout_marginBottom="8dp">
+    android:layout_marginLeft="16dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginRight="16dp"
+    android:layout_marginBottom="2dp">
+
+    <ImageView
+        android:id="@id/messageUserAvatar"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="8dp" />
 
     <com.google.android.flexbox.FlexboxLayout
         android:id="@id/bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/message_incoming_bubble_margin_right"
+        android:layout_toEndOf="@id/messageUserAvatar"
         android:orientation="vertical"
-        android:layout_centerHorizontal="true"
         app:alignContent="stretch"
         app:alignItems="stretch"
         app:flexWrap="wrap"
         app:justifyContent="flex_end">
 
         <androidx.emoji.widget.EmojiTextView
-            android:id="@+id/messageText"
+            android:id="@+id/messageAuthor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:textColor="@color/colorPrimary"
+            android:textSize="12sp" />
+
+        <include layout="@layout/item_message_quote" android:visibility="gone"/>
+
+        <androidx.emoji.widget.EmojiTextView
+            android:id="@+id/incomingMessageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:gravity="center_horizontal"
-            android:textAlignment="center"
-            tools:text="System message"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
+            android:lineSpacingMultiplier="1.2"
+            android:textIsSelectable="false"
+            android:autoLink="all"
             app:layout_alignSelf="flex_start"
             app:layout_flexGrow="1"
-            app:layout_wrapBefore="true"/>
+            app:layout_wrapBefore="true" />
 
         <TextView
-            android:id="@id/messageTime"
+            android:id="@+id/incomingMessageTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/warm_grey_four"
-            android:textSize="12sp"
-            tools:text="17:30"
+            android:layout_below="@+id/outgoingMessageText"
             android:layout_marginStart="8dp"
-            app:layout_alignSelf="center"
-            app:layout_flexGrow="1"
-            app:layout_wrapBefore="false"/>
+            app:layout_alignSelf="center" />
+
     </com.google.android.flexbox.FlexboxLayout>
 </RelativeLayout>
