--- a/app/src/main/res/layout/rv_chat_outgoing_text_item.xml
+++ b/app/src/main/res/layout/rv_chat_outgoing_text_item.xml
@@ -27,51 +27,37 @@
     android:layout_marginRight="16dp"
     android:layout_marginBottom="2dp">
 
-    <ImageView
-        android:id="@id/messageUserAvatar"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="8dp" />
-
     <com.google.android.flexbox.FlexboxLayout
         android:id="@id/bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/message_incoming_bubble_margin_right"
-        android:layout_toEndOf="@id/messageUserAvatar"
-        android:orientation="vertical"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="@dimen/message_outcoming_bubble_margin_left"
         app:alignContent="stretch"
         app:alignItems="stretch"
         app:flexWrap="wrap"
         app:justifyContent="flex_end">
 
-        <androidx.emoji.widget.EmojiTextView
-            android:id="@+id/messageAuthor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:textColor="@color/colorPrimary"
-            android:textSize="12sp" />
-
         <include layout="@layout/item_message_quote" android:visibility="gone"/>
 
         <androidx.emoji.widget.EmojiTextView
-            android:id="@id/messageText"
+            android:id="@+id/outgoingMessageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignWithParentIfMissing="true"
             android:lineSpacingMultiplier="1.2"
-            android:textIsSelectable="false"
-            android:autoLink="all"
             app:layout_alignSelf="flex_start"
             app:layout_flexGrow="1"
-            app:layout_wrapBefore="true" />
+            app:layout_wrapBefore="true"
+            android:textColorHighlight="@color/nc_grey"
+            android:textIsSelectable="false"
+            android:autoLink="all"/>
 
         <TextView
-            android:id="@id/messageTime"
+            android:id="@+id/outgoingMessageTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/messageText"
+            android:layout_below="@id/outgoingMessageText"
             android:layout_marginStart="8dp"
             app:layout_alignSelf="center" />
 
