--- a/app/src/main/res/layout/rv_chat_system_item.xml
+++ b/app/src/main/res/layout/rv_chat_system_item.xml
@@ -19,59 +19,50 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginStart="16dp"
-    android:layout_marginTop="2dp"
+    android:layout_marginTop="8dp"
     android:layout_marginEnd="16dp"
-    android:layout_marginBottom="2dp">
+    android:layout_marginBottom="8dp">
 
     <com.google.android.flexbox.FlexboxLayout
+        android:id="@id/bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:orientation="vertical"
-        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
         app:alignContent="stretch"
         app:alignItems="stretch"
         app:flexWrap="wrap"
         app:justifyContent="flex_end">
 
-        <ImageView
-            android:id="@id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            app:layout_flexGrow="1"
-            app:layout_wrapBefore="true"
-            app:layout_alignSelf="flex_start"
-            tools:src="@tools:sample/backgrounds/scenic"/>
-
         <androidx.emoji.widget.EmojiTextView
-            android:id="@id/messageText"
+            android:id="@+id/systemMessageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:autoLink="all"
-            android:textColor="@color/warm_grey_four"
-            android:textColorLink="@color/warm_grey_four"
-            android:textIsSelectable="false"
-            android:textSize="12sp"
+            android:layout_centerHorizontal="true"
+            android:gravity="center_horizontal"
+            android:textAlignment="center"
+            tools:text="System message"
+            android:textColor="@color/colorPrimary"
+            android:textSize="14sp"
             app:layout_alignSelf="flex_start"
             app:layout_flexGrow="1"
-            app:layout_wrapBefore="true" />
+            app:layout_wrapBefore="true"/>
 
         <TextView
-            android:id="@id/messageTime"
+            android:id="@+id/systemItemTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="8dp"
             android:textColor="@color/warm_grey_four"
-            app:layout_alignSelf="center" />
+            android:textSize="12sp"
+            tools:text="17:30"
+            android:layout_marginStart="8dp"
+            app:layout_alignSelf="center"
+            app:layout_flexGrow="1"
+            app:layout_wrapBefore="false"/>
     </com.google.android.flexbox.FlexboxLayout>
-
 </RelativeLayout>
